
  Changes to linkable? Subsite is now a named option (:subsite =>
  "admin"), the target of the links defaults to #this and the action
  defaults to :index for model targets and :show for records.


Hobo routing

  Now automatically updates routes without restarting the server in
  dev mode (yay!)

  
Site search -- don't search for records that are not linkable


Hobo Rapid

  CSS -- small tweaks

  JavaScript -- Ajax spinner now appears for a minimum time, and has a
  fade effect.

  Clean theme -- many improvements

  Added an ajax option -- :spinner_next_to. Pass the dom id of a node
  and the spinner will appear near that node.


Rapid tag library

  <field-list> now defaults to <view> not <edit> as the tag for the
  fields. Also, if the tag is <input>, non-editable fields are skipped
  (used keep them in but to drop back to views).

  <card> displays nothing if the object is not viewable. Default card
  has various improvements.

  New attribute <type-name dasherize/>

  Fix: merge-attrs was missing on the belongs_to view

  <boolean-checkbox-editor> now supports a custom ajax message and
  configures the ajax spinner to appear near the checkbox.

  Fix: incorrect use of <ul> in <error-messages>

  <magic-nav> -- removed serach item, extended to maximum of 6 models

  Many, many improvements to the default pages

  <with-fields associations="has_many"> iterates of all has_many
  relationships

Removed require of ruby-debug from fixdryml.task

New plugins featuring bundles: rapid_blog, rapid_comments,
rapid_images and rapid_tagging. All are work-in-progress.


=== Release 0.7 ===

Hobo 0.7 is tested against Rails 1.99.1 (aka Rais 2.0 RC2)

DRYML

  Switched to dashes instead of underscores for tag and attributes
  names. These are converted to underscores in the underlying ruby
  code.

  Unification of tempalte tags and non-template tags. There is now
  only one type of tag and two different ways to call a tag:
